<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">yikego</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_title">社区网购超市</string>
    <string name="splash_web">www.yikego.com</string>
    <string name="item_text_arrive">1000米内30分钟到达</string>
    <string name="item_text_takeaway">30元起送</string>
    <string name="title_map">地图</string>
    <string name="location_now">正在定位</string>
    <string name="non_login">未登录，请先登录</string>
    <string name="title_import">请输入超市名称</string>
    <string name="title_import_goods">请输入商品名称</string>
    <string name="text_define"> 确定</string>
    <string name="text_settlement"> 去结算</string>
    <string name="text_loading"> 加载ing...</string>
    <string name="text_title_goods_detail"> 商品详情</string>
    <string name="text_enter_market_detail">进入店铺</string>
    <string name="text_goods_Description">商品描述</string>
    <string name="confirm_buy">立刻购买</string>
    <string name="main_left_login_user">登录/注册</string>
    <string name="main_left_order_search">订单查询</string>
    <string name="user_order">我的订单</string>
    <string name="main_left_shop_score">购物积分</string>
    <string name="main_left_shop_quan">购物券</string>
    <string name="main_left_shop_quan_verify">验证购物券</string>
    <string name="main_left_feedback">意见反馈</string>
    <string name="main_left_setting">设置</string>
    <string name="goods_list">产品列表</string>
    <string name="goods_detail">商品详情</string>
    <string name="text_shopping_car">购物车</string>
    <string name="text_submit_order">填写订单</string>
    <string name="text_consignee_title">编辑收货地址</string>
    <string name="text_settlement_amount">结算</string>
    <string name="cod_orders_completed">订单已完成</string>
    <string name="cod_call_to_advisory">详情可电话咨询</string>
    <string name="cod_phone_num1">136 2292 9009</string>
    <string name="cod_phone_num2">021&#8211;4939 8988</string>
    <string name="goods_cout_price">商品金额￥</string>
    <string name="user_login">用户登录</string>
    <string name="user_register">用户注册</string>
    <string name="yikego_login_title">海客社区超市用户登录</string>
    <string name="user_login_hint">用户名/邮箱/手机号</string>
    <string name="user_password_hint">密码</string>
    <string name="pwd_hint_text">密码（6-24位）</string>
    <string name="login">登录</string>
    <string name="register_title">注册</string>
    <string name="register">立即注册</string>
    <string name="quick_login">无帐号快速登录</string>
    <string name="phone_hint_text">手机号</string>
    <string name="authCode_button_text">获取验证码</string>
    <string name="authCode_hint_text">验证码</string>
    <string name="authCode_login_text">验证并登录</string>
    <string name="address_hint_text">收货地址</string>
    <string name="update_app">检测更新</string>
    <string name="clear_photo">清除图片缓存</string>
    <string name="yikego_feedback_title">反馈内容（必填）</string>
    <string name="feedback_hint">500字以内</string>
    <string name="feedback_phone_title">连续方式（选填）</string>
    <string name="feedback_phone_hint">请输入手机号码</string>
    <string name="phone_invalid">手机号不正确</string>
    <string name="password_invalid">密码格式不正确</string>

    <string name="score_exchange">积分兑换</string>
    <string name="verify_ticket">验证购物券</string>
    <string name="verify_ticket_title">请填写购物券号码</string>
    <string name="verrify">验证</string>

    <string name="register_ok">注册成功，请登录</string>
    <string name="register_exist">该账号已注册</string>
    <string name="auth_code_error">验证码错误</string>
    <string name="register_error">注册异常</string>
    
    <string name="login_ok">登录成功</string>
    <string name="login_password_error">用户名或密码错误</string>
    <string name="login_error">登录异常</string>
    <string name="quit_login">退出登录</string>
    
    <string name="status">订单状态：</string>
    <string name="order_money">订单金额：</string>
    <string name="order_no">订单编号：</string>
    <string name="order_time">下单时间：</string>
    <string name="order_name">订单名称：</string>
    <string name="product_name">商品名称：</string>
    <string name="text_playment_way">支付方式</string>
    <string name="text_playment_cod">货到付款</string>
    <string name="text_commit_order_success">提交成功</string>
    <string name="text_playment_online">在线支付</string>
    <string name="text_play_success">支付成功</string>
    <string name="text_play_success_hint">您的订单已经提交:</string>
    <string name="text_order_num">订单号: </string>
    <string name="text_order_amount">应付金额: </string>
    <string name="text_order_playway">支付方式: </string>
    <string name="text_songhuo">送货信息</string>
    <string name="order_info">订单信息</string>
    <string name="text_user_order_detail">订单详情</string>

    <string name="point_type">积分类型：</string>
    <string name="point_desc">积分描述：</string>
    <string name="point_count">积分：</string>
    <string name="yuan">￥: </string>
    <string name="pay_for">应支付 : ￥</string>
    <string name="orderProductCount"> 件</string>

    <plurals name="numberOfPoint">
        <item quantity="other">总积分：%d分</item>
    </plurals>

    <string name="request_error">获取数据失败</string>
    <string name="back_home">首页</string>
    <string name="location_history_edit_hint">请输入要切换的地址</string>
    <string name="location_history_location_hint">点击定位在当前的位置</string>
    <string name="location_history_his_location_hint">历史位置</string>
    <string name="location_history_actionbar_title">切换位置</string>

    <string name="order_status_create">未支付</string>
    <string name="order_status_costed">已支付</string>
    <string name="order_status_sending">交易中</string>
    <string name="order_status_ok">交易完成</string>
    <string name="coupon_check_ok">优惠券验证成功</string>
    <string name="coupon_no_exist">优惠券不存在</string>
    <string name="coupon_checked">优惠券已验证</string>
    <string name="coupon_used">优惠券已使用</string>
    <string name="coupon_cancel">优惠券已取消</string>
    <string name="coupon_overdue">优惠券已过期</string>
    <string name="coupon_list_store_text">便利店:</string>
    <string name="coupon_list_coupon_text">优惠券码:</string>
    <string name="coupon_check_null">无效的优惠券验证码</string>
    <string name="coupon_valid_text">有效日期:</string>
    <string name="coupon_cost">￥ <xliff:g id="number">%d</xliff:g></string>

</resources>