<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        layout="@layout/actionbar_cod" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/order_success_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/img_flag_bg"
            android:text="@string/text_play_success_hint"
            android:textColor="@color/bg_color_blue"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/order_num_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_order_num"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="786362890"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/order_amount_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_order_amount"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="$ 874.00"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/order_playway_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_order_playway"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/order_playway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="在线支付"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#d1d1d1" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/layout_online_payform"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_order_success"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingTop="5dp"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/cod_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/cod_orders_completed"
                android:textColor="@color/bg_color_blue"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/cod_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/phone_num1"
                android:layout_below="@+id/cod_text1"
                android:layout_marginTop="16dp"
                android:text="@string/cod_call_to_advisory"
                android:textColor="@color/bg_color_blue"
                android:textSize="20sp" />

            <Button
                android:id="@+id/phone_num2"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/phone_num1"
                android:layout_below="@+id/phone_num1"
                android:layout_marginTop="20dp"
                android:background="@drawable/corners_bg"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/cod_phone_num2"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/phone_num1"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_below="@+id/cod_text2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/corners_bg"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/cod_phone_num1"
                android:textColor="@color/white" />
        </RelativeLayout>
"
    </FrameLayout>

</LinearLayout>