<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_gray"
    android:orientation="vertical" >

    <include
        android:id="@+id/include1"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        layout="@layout/actionbar_cod" />

    <RelativeLayout
        android:id="@+id/browser_search"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/bg_color_blue" >

        <EditText
            android:id="@+id/search_edittext"
            android:layout_width="match_parent"
            android:layout_height="36dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="60dip"
            android:background="@drawable/btn_search_bg"
            android:hint="@string/location_history_edit_hint"
            android:paddingLeft="30dip"
            android:textColorHint="@color/bg_color_gray" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dip"
            android:background="@drawable/ic_btn_search" />

        <TextView
            android:id="@+id/text_define"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/text_define"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_location_cur"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:clickable="true">

        <TextView
            android:id="@+id/title_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/location_history_location_hint"
            android:textColor="@color/bg_color_blue"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/ic_location" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_location_his"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <TextView
            android:id="@+id/title_his"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/location_history_his_location_hint"
            android:textColor="@color/bg_color_blue"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/ic_delete" />
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0"
        android:background="@color/white"
        android:cacheColorHint="@color/white"
        android:divider="@color/white"
        android:dividerHeight="2dip"
        android:drawSelectorOnTop="false"
        android:footerDividersEnabled="false" />

</LinearLayout>